--- a/polzunov-feast-admin/polzunov-feast-admin/index.html
+++ b/polzunov-feast-admin/polzunov-feast-admin/index.html
@@ -1,12 +1,18 @@
 <!doctype html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="ru" style="height: 100%">
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Polzunov.Feast</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <style>
+          body, #app {
+              height: 100%;
+              margin: 0;
+          }
+    </style>
+</head>
+<body>
+<div id="app"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
